--- a/index.html
+++ b/index.html
@@ -14,6 +14,17 @@
                 <button id="addbtn">New Book</button>
         </header>
         <main>
+            <div class="nav-book-library">
+                <div class="filter-buttons">
+                    <button id="all-btn" class="selected">All Books</button>
+                    <button id ="read-btn">Already Read</button>
+                    <button id ="not-read-btn">Want to Read</button>
+                </div>
+                <div class="search-box">
+                    <svg focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"></path></svg>
+                    <input autocomplete="off" autofocus="off" id="search" placeholder="Search by Title or Author" type="search">
+                </div>
+            </div>
             <div class="book-library"></div>
         </main>
         <footer>
@@ -38,6 +49,7 @@
                     No
                 </label>
                 <button id="addbtn2">Add Book</button>
+                <button id="save-btn" class="hide">Save Changes</button>
             </form>
         </dialog>
     </div>       
